fix(business-card-block): business card layout issues

--- a/src/components/business-card-block/business-card-block.css
+++ b/src/components/business-card-block/business-card-block.css
@@ -11,16 +11,25 @@ html {
 }
 
 .business-card {
-  display: flex;
-  align-items: center;
-  padding: 25px;
-  min-height: 200px;
+  display: grid;
+  grid-template-columns: 120px 60px calc(100% - 180px);
   background-color: white;
   border-radius: 6px;
   border-style: solid;
   border-width: 1px;
   border-color: rgba(53, 184, 190, 0.15);
   margin-bottom: 10px;
+  padding: 25px;
+}
+
+.business-icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-column-start: 1;
+  grid-column-end: span 1;
+  grid-row-start: 1;
+  grid-row-end: span 5;
 }
 
 .business-icon {
@@ -37,10 +46,63 @@ html {
   border-radius: 8px;
 }
 
-.business-card-content {
-  display: block;
+.business-name {
+  grid-column-start: 2;
+  grid-column-end: span 2;
+  grid-row-start: 1;
+  grid-row-end: span 1;
+}
+
+.business-description {
+  grid-column-start: 2;
+  grid-column-end: span 2;
+  grid-row-start: 2;
+  grid-row-end: span 1;
+}
+
+.business-slug-label {
+  display: flex;
+  align-items: center;
+  grid-column-start: 2;
+  grid-column-end: span 1;
+  grid-row-start: 3;
+  grid-row-end: span 1;
+}
+
+.business-slug-edit {
   width: 100%;
-  flex-shrink: 1;
+  display: flex;
+  align-items: center;
+  grid-column-start: 3;
+  grid-column-end: span 1;
+  grid-row-start: 3;
+  grid-row-end: span 1;
+}
+
+.business-id-label {
+  display: flex;
+  align-items: center;
+  grid-column-start: 2;
+  grid-column-end: span 1;
+  grid-row-start: 4;
+  grid-row-end: span 1;
+}
+
+.business-id-edit {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  grid-column-start: 3;
+  grid-column-end: span 1;
+  grid-row-start: 4;
+  grid-row-end: span 1;
+}
+
+.business-buttons {
+  grid-column-start: 2;
+  grid-column-end: span 2;
+  grid-row-start: 5;
+  grid-row-end: span 1;
 }
 
 h6 {
@@ -70,18 +132,23 @@ p {
   padding-right: 15px;
   text-decoration: none;
   align-items: center;
+  margin-top: 16px;
 }
 
 .field {
+  width: 100%;
   display:  inline-block;
   --font-size: 16px;
   --font-weight: normal;
   --line-height: 22px;
-  margin-bottom: 16px;
+  --overflow: hidden;
+  --text-overflow: ellipsis;
+  --white-space: nowrap;
 }
 
 .detail {
   color: var(--color-default);
+  font-size: 16px;
 }
 
 .delete-button {
